# HoughEllipse

./: .coverage  .flake8  noxfile.py  pyproject.toml  readme.md
docs/: conf.py  index.rst  reference.rst
results/: centers.txt
src/: generalized_hough.py  main.py  requirements.txt
src/hough/: __init__.py  generalized_hough.py  main.py
src/hough/utils/: draw_ellipses.py
src/utils/: draw_ellipses.py
tests/: test_console.py  test_hough_ellipse.py  test_pipeline.py
utils/: draw_ellipses.py
